change style for mobile

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <!-- Register Screen -->
-    <div id="register-screen" class="screen">
+    <div id="register-screen" class="screen hidden">
         <div class="phonedialog">
             <h1>Register</h1>
             <input type="text" id="phone-number" placeholder="Enter your phone number">
@@ -21,7 +21,7 @@
     </div>
 
     <!-- Game Screen -->
-    <div id="game-screen" class="screen hidden">
+    <div id="game-screen" class="screen ">
         <div class="gamescreen">
             <!-- <h1>Game</h1> -->
             <div id="objects-container">
