--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
         <li>
             <a href="./src/scratch/index.html">Scratch Game</a>
         </li>
+        <li>
+            <a href="./src/hittarget/index.html">Hit Traget</a>
+        </li>
+        <li>
+            <a href="./src/tugofwar/index.html">Tug of War</a>
+        </li>
     </ul>
 </body>
 
